refactor: rm unused interfaces
