# docs/swagger.yaml
@@ -350,6 +350,32 @@ paths:
       summary: Update the book in the store
       tags:
       - books
+  /books/{id}/authors:
+    get:
+      consumes:
+      - application/json
+      parameters:
+      - description: path param
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/dto.AuthorResponse'
+            type: array
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/dto.Response'
+      summary: List of authors from the store
+      tags:
+      - books
   /members:
     get:
       consumes:
@@ -472,6 +498,32 @@ paths:
           schema:
             $ref: '#/definitions/dto.Response'
       summary: Update the member in the store
+      tags:
+      - members
+  /members/{id}/books:
+    get:
+      consumes:
+      - application/json
+      parameters:
+      - description: path param
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/dto.BookResponse'
+            type: array
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/dto.Response'
+      summary: List of books from the store
       tags:
       - members
 swagger: "2.0"
